@startuml

title __THESISAPP's Class Diagram__\n

  namespace cz.utb.thesisapp {
    class cz.utb.thesisapp.GlobalValues {
        {static} + API_CLIENT : String
        {static} + API_PORT : String
        {static} + API_REST : String
        {static} + API_SSE : String
        {static} + API_TOUCH : String
        {static} + DATE_FORMAT : String
        {static} + DB_CREATED : String
        {static} + DB_DATABASE_NAME : String
        {static} + DB_ID : String
        {static} + DB_RECEIVED : String
        {static} + DB_TABLE_LOCAL : String
        {static} + DB_TABLE_REMOTE : String
        {static} + DB_TOUCH_TYPE : String
        {static} + DB_X : String
        {static} + DB_Y : String
        {static} + EXTRA_COMMAND : String
        {static} + EXTRA_COMMAND_SET_CHECKED : String
        {static} + EXTRA_COMMAND_SET_UNCHECKED : String
        {static} + EXTRA_CONNECTION_CLOSED : String
        {static} + EXTRA_DOWNLOAD : String
        {static} + EXTRA_EDIT : String
        {static} + EXTRA_KROYSERVER_USE_DATABASE : String
        {static} + EXTRA_SPEED_PROGRESS : String
        {static} + EXTRA_TOUCH_MOVE : String
        {static} + EXTRA_TOUCH_START : String
        {static} + EXTRA_TOUCH_UP : String
        {static} + EXTRA_UPLOAD : String
        {static} + EXTRA_USERS : String
        {static} + EXTRA_USER_INFO : String
        {static} + EXTRA_X : String
        {static} + EXTRA_Y : String
        {static} + FILTER_INFO : String
        {static} + FILTER_KRYO : String
        {static} + FILTER_MAIN_ACTIVITY : String
        {static} + FILTER_TOUCH : String
        {static} + FILTER_WEB : String
        {static} + SLEEP_BEFORE_EXPORT_DB : int
        {static} + TOUCH_BREAK_TEST : int
        {static} + TOUCH_FAB_TOUCHED : int
        {static} + TOUCH_ITERATIONS : int
        {static} + TOUCH_NO_TEST : int
        {static} + TOUCH_SLEEP_BASE : int
        {static} + TOUCH_SLEEP_MIN : int
        {static} + TOUCH_START_TEST : int
        {static} + TOUCH_TEST_FINISHED : int
    }
  }
  

  namespace cz.utb.thesisapp {
    class cz.utb.thesisapp.GlobalValues.Touch {
        + clientCreated : Date
        + clientReceived : Date
        + touchType : String
        + x : float
        + y : float
        + Touch()
        + Touch()
        + Touch()
    }
  }
  

  namespace cz.utb.thesisapp {
    class cz.utb.thesisapp.MainActivity {
        + operation : LinkedHashMap<Integer, Date>
        ~ context : Context
        ~ currentlyShownTag : String
        ~ dateFormat : SimpleDateFormat
        ~ mBound : boolean
        {static} - PERMISSIONS_STORAGE : String[]
        {static} - REQUEST_EXTERNAL_STORAGE : int
        {static} - TAG : String
        - connection : ServiceConnection
        - dataAdapter : SimpleCursorAdapter
        - drawer : DrawerLayout
        - firebase : Firebase
        - infoReceiver : BroadcastReceiver
        - kryoReceiver : BroadcastReceiver
        {static} - lock : Lock
        - mAppBarConfiguration : AppBarConfiguration
        - oldCursor : Cursor
        - token : String
        - webReceiver : BroadcastReceiver
        + exportDB()
        + init()
        + ismBound()
        + kryoRequestFollow()
        + kryoUnfollow()
        + kryoUseDatabase()
        + onBackPressed()
        + onCreateLoader()
        + onCreateOptionsMenu()
        + onLoadFinished()
        + onLoaderReset()
        + onSupportNavigateUp()
        + saveToLocalDatabase()
        + sendTouch()
        + setFirebaseRemoteListener()
        + setViewModelTouch()
        + setmBound()
        + startDownloadTest()
        + startFirebaseServices()
        + startKryo()
        + startWebServices()
        + stopFirebase()
        + stopKryo()
        + stopWebServices()
        # onCreate()
        # onResume()
        # onStart()
        # onStop()
        - bindService()
        - getTime()
        - removeOldDB()
        - startService()
    }
  }
  

  namespace cz.utb.thesisapp {
    class cz.utb.thesisapp.ThesisApp {
        + onCreate()
    }
  }
  

  cz.utb.thesisapp.GlobalValues +-down- cz.utb.thesisapp.GlobalValues.Touch
  cz.utb.thesisapp.MainActivity .up.|> android.app.LoaderManager.LoaderCallbacks
  cz.utb.thesisapp.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  cz.utb.thesisapp.MainActivity o-- cz.utb.thesisapp.services.MyService : mService
  cz.utb.thesisapp.MainActivity o-- cz.utb.thesisapp.ui.home.HomeViewModel : homeViewModel
  cz.utb.thesisapp.MainActivity o-- cz.utb.thesisapp.ui.info.InfoViewModel : infoViewModel
  cz.utb.thesisapp.MainActivity o-- cz.utb.thesisapp.ui.touch.TouchViewModel : touchViewModel
  cz.utb.thesisapp.ThesisApp -up-|> android.app.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
